[ELM] Feito parte do cadastro, falta seletor de sexo e input de data de nascimento... fazr funçoes para eles???

--- a/static/css/cadastro-page.css
+++ b/static/css/cadastro-page.css
@@ -43,7 +43,11 @@ button{
   margin-bottom: 10px;
 }
 .elm-form{
-  background: #f4f4f4;
+  max-width: 960px;
+  margin: auto;
+  background: #fff;
   padding: 1em;
-  margin-bottom: 10px;
+}
+.form-margin{
+  margin-top: 1em;
 }
