--- a/static/css/buscaFilme.css
+++ b/static/css/buscaFilme.css
@@ -5,7 +5,14 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .info-filme{
 padding: 1em;
+} 
+.div-btn-filme{
+    display: flex;
 }
+.btn-filme{
+    margin-right: 5px;
+}
+
 @media (max-width:600px) {
 .grid{
 grid-template-columns: 1fr;
